[package]
name = "elusiv-merkle-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.8"
solana-program = "1.16.14"
thiserror = "1.0.49"
fast-math = "0.1.1"
rs_merkle = "1.4"
hex = "0.4.3"
solana-merkle-tree = "1.16.15"
glassbench = "0.3.5"
lipsum = "0.9"
solana-sdk = "1.16.15"
rayon = "1.8.0"

[[bench]]
name = "merkle_bench"
harness = false
